Completion of Personal Details, Experience Timeline, Education Timeline, Skills and Language lists. HTML/CSS.

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,18 +7,193 @@
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
+  <script type="text/javascript" src="JavaScript.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" ></script>
 </head>
 <body>
+
+  <div class="dev_by">
+    <p class="dev_by_text"> Developed By Mohammed.Ik.Bokhari@Gmail.com - 2019.
+  </div>
+
+  <div class="edu_head_container">
+    <p class="edu_header"> Education </p>
+    <p class="skill_header"> Skills </p>
+  </div>
+
+  <div class="exp_head_container">
+    <p class="exp_header"> Experience </p>
+  </div>
+
+  <div class="timeline">
+    <ul>
+      <li>
+        <div class="content">
+          <h3>Globalink Research Internship</h3>
+          <p>Topic: LoRaWAN Literature Review and Network Deployment using Dragino LoRa. The internship was held in Universite de Sherbrooke, Sherbrooke, Canada.<br><br> <b>Duration:</b> Three months.<br><br> <b> Status:</b> Student.</p>
+        </div>
+        <div class="time">
+          <h4>May 2018</h4>
+        </div>
+      </li>
+
+      <li>
+        <div class="content">
+          <h3>Third National Programming Competition - Abha</h3>
+          <p>Topic: Programming problem-solving competition amongst universities kingdom-wide. Training duration was <b> two weeks </b> prior to competition date.<br><br> <b>Contest Duration:</b> Four hours.<br><br> <b>Score:</b> 6/10 questions solved.<br><br> <b>Status:</b> Student. </p>
+        </div>
+        <div class="time">
+          <h4>October 2018</h4>
+        </div>
+      </li>
+
+      <li>
+        <div class="content">
+          <h3>Computer Lab Teaching Assistant</h3>
+          <p>Java programming-101 lab for Computer Science students at University of Jeddah.<br><br><b> Concepts taught include:</b> control statements, functions, variables, arrays, types, system input, arithmetics, and string manipulation.<br><br> <b>Duration:</b> Four months. <br><br> <b> Status:</b> Student.</p>
+        </div>
+        <div class="time">
+          <h4>January 2019</h4>
+        </div>
+      </li>
+
+      <li>
+        <div class="content">
+          <h3>Android Developer at Global Arabian for Modern Applications Ltd.</h3>
+          <p>Member of the mobile development team in the development department. Currently under training period for a duration of <b>three</b> months.<br><br> <b>Duration:</b> Currently working there.<br><br><b>Status:</b> Employee.</p>
+        </div>
+        <div class="time">
+          <h4>June 2019</h4>
+        </div>
+      </li>
+      <div style="clear:both;"></div>
+    </ul>
+  </div>
 
   <div class="topnav">
     <a class="active" href="#home">Home</a> <!-- Personal Image, About Me, Job Title, Twitter Feed, ETC -->
     <a href="#exp">Experience</a> <!-- Work Experience -->
-    <a href="#prj_demo">Projects</a> <!-- live video simultaneously for all projects -->
+    <a href="#edu">Education</a>
+    <a href="#skills">Skill</a>
+    <a href="#prj_demo">Projects Demo</a> <!-- live video simultaneously for all projects -->
+    <a href="#certs">Certifications</a>
+    <a href="https://www.github.com/memeos135">GitHub</a>
     <a href="#contact">Contact</a> <!-- Email, mobile, twitter -->
   </div>
 
   <div class="author_name"> Mohammed Ibrahim K. Bokhari </div>
   <div class="author_job"> Android Developer + Front-End Developer </div>
+
+  <div class="edu_skill_container">
+
+    <div class="edu_list">
+
+      <div class="timeline_edu">
+        <ul>
+
+          <li>
+            <div class="content">
+              <h3>BSc Computer Science</h3>
+              <p><b>Organization:</b> University of Jeddah.  <br><br><b> Award:</b> Second Honors.<br><br> <b>GPA:</b> 4.7/5.0 </p>
+            </div>
+            <div class="time">
+              <h4>May 2018</h4>
+            </div>
+          </li>
+
+          <div style="clear:both;"></div>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="skill_list">
+
+      <div class="prog_container">
+        <ul>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>Java</h3>
+            <progress value="87" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>JavaScript</h3>
+            <progress value="80" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>jQuery</h3>
+            <progress value="75" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>SQL</h3>
+            <progress value="50" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>HTML</h3>
+            <progress value="70" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>CSS</h3>
+            <progress value="65" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>Firebase</h3>
+            <progress value="80" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>Python</h3>
+            <progress value="45" max="100"></progress>
+          </div>
+        </li>
+
+      </ul>
+      </div>
+
+      <div class="prog_container_two">
+        <ul>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>English</h3>
+            <progress value="95" max="100"></progress>
+          </div>
+        </li>
+
+        <li class="skillset">
+          <div class="content">
+            <h3>Arabic</h3>
+            <progress value="95" max="100"></progress>
+          </div>
+        </li>
+
+      </ul>
+      </div>
+
+    </div>
+
+  </div>
 
   <div class="container">
 
@@ -42,10 +217,10 @@
 
     <div class="about_me_specifics">
       <h2 class="about_me_text"> Personal Details</h2>
-      <ul class="about_me_summary">
+      <ul class="about_me_summary_two">
         <li> <b>Date of Birth: </b>1996/12/1</li>
         <li> <b>Address: </b>Jeddah, Abdullah Al-Faisal St. 21453</li>
-        <li> <b>Nationality: </b>Saudi Arabian</li>
+        <li> <b>Nationality: </b>Saudi</li>
         <li> <b>Mobile Phone: </b>+966547171060</li>
         <li> <b>Email: </b>Mohammed.ik.bokhari@gmail.com</li>
       </ul>
@@ -56,24 +231,15 @@
     </div>
 
   </div>
-
   <!-- particles.js container -->
   <div id="particles-js"></div>
   <!-- scripts -->
   <script src="../particles.js"></script>
   <script src="js/app.js"></script>
   <script>
-    var count_particles, stats, update;
-    stats = new Stats;
-    stats.setMode(0);
-    stats.domElement.style.position = 'absolute';
-    stats.domElement.style.left = '0px';
-    stats.domElement.style.top = '0px';
-    document.body.appendChild(stats.domElement);
+    var count_particles, update;
     count_particles = document.querySelector('.js-count-particles');
     update = function() {
-      stats.begin();
-      stats.end();
       if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
         count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
       }
