--- a/public/index.html
+++ b/public/index.html
@@ -296,6 +296,27 @@
       </div>
     </div>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAtS2X0vtOnUI34I-OkeAIz00Y3eCyoiKo",
+        authDomain: "personalweb-ac969.firebaseapp.com",
+        databaseURL: "https://personalweb-ac969.firebaseio.com",
+        projectId: "personalweb-ac969",
+        storageBucket: "",
+        messagingSenderId: "512102527158",
+        appId: "1:512102527158:web:186e588b2a55f0a8"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
+    
   </div>
 </body>
 </html>
