Fixes to size issues

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" media="screen" href="style.css">
   <script type="text/javascript" src="JavaScript.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" ></script>
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -254,27 +253,21 @@
       <div class="scrollmenu">
         <div class="card">
           <iframe width="320" height="240"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            src="https://www.youtube.com/embed/4MQD4m-SGPA">
           </iframe>
           <h4 class="card_title"> BooKT Android </h4>
         </div>
         <div class="card">
           <iframe width="320" height="240"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            src="https://www.youtube.com/embed/AFqHu8rX7KQ">
           </iframe>
           <h4 class="card_title"> BooKT Webpage </h4>
         </div>
         <div class="card">
           <iframe width="320" height="240"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            src="https://www.youtube.com/embed/XLdKC5vclms">
           </iframe>
           <h4 class="card_title"> Udacity MacroCounter </h4>
-        </div>
-        <div class="card">
-          <iframe width="320" height="240"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
-          </iframe>
-          <h4 class="card_title"> Udacity BakingApp </h4>
         </div>
       </div>
 
@@ -316,7 +309,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
-    
+
   </div>
 </body>
 </html>
